<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".TransactionDetail.TransactionDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/applayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBarLayout1"
            style="@style/Widget.MaterialComponents.ActionBar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E5E6E6"
            app:menu="@menu/transaction_detail"
            app:title="@string/app_name"
            app:titleTextColor="#0F259C">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TransactionName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.113"
                app:startIconDrawable="@drawable/ic_baseline_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TransactionAmount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_amount"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/TransactionName"

                app:layout_constraintStart_toStartOf="@+id/TransactionName"
                app:layout_constraintTop_toBottomOf="@id/TransactionName"
                app:startIconDrawable="@drawable/ic_baseline_money">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transaction_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/DateSelect"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                app:endIconDrawable="@drawable/ic_baseline_calendar_today_24"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/TransactionAmount"
                app:layout_constraintStart_toStartOf="@id/TransactionAmount"
                app:layout_constraintTop_toBottomOf="@id/TransactionAmount"
                app:layout_constraintVertical_bias="0.035">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/recurringSwitch"
                android:layout_width="49dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/DateSelect"
                app:layout_constraintTop_toBottomOf="@id/DateSelect"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/recurring_transaction"
                android:textColor="#0A2ADC"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.114"
                app:layout_constraintStart_toEndOf="@+id/recurringSwitch"
                app:layout_constraintTop_toBottomOf="@+id/DateSelect" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fromDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="164dp"
                android:layout_height="65dp"
                android:hint="@string/from_date"
                app:endIconDrawable="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recurringSwitch"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fromDate_select"
                    android:layout_width="162dp"
                    android:layout_height="55dp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/toDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="164dp"
                android:layout_height="65dp"
                android:hint="@string/to_date"
                app:endIconDrawable="@drawable/ic_baseline_calendar_today_24"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.686"
                app:layout_constraintStart_toEndOf="@id/fromDate"

                app:layout_constraintTop_toTopOf="@id/fromDate">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/toDate_select"
                    android:layout_width="162dp"
                    android:layout_height="55dp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/transactionType"
                android:layout_width="302dp"
                android:layout_height="36dp"
                app:errorEnabled="true"
                android:layout_marginTop="20dp"
                android:autofillHints="Select Transaction Type"
                android:text="@string/income"
                android:textColor="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.853"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fromDate">

            </Spinner>

            <ImageView
                android:id="@+id/type_image"
                android:layout_width="43dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/transaction_type_image"
                android:src="@drawable/credit"
                app:layout_constraintEnd_toStartOf="@+id/transactionType"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fromDate"
                app:srcCompat="@drawable/credit" />

            <Spinner
                android:id="@+id/transactionCategory"
                android:layout_width="311dp"
                android:layout_height="36dp"
                android:layout_marginTop="12dp"
                android:autofillHints="Select Transaction Category"
                android:text="@string/select_category"
                android:textColor="#D36363"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.93"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transactionType">

            </Spinner>

            <ImageView
                android:id="@+id/category_image"
                android:layout_width="38dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/transaction_category_image"
                android:src="@drawable/cashbag"
                app:layout_constraintEnd_toStartOf="@+id/transactionType"
                app:layout_constraintHorizontal_bias="0.472"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type_image">

            </ImageView>


            <EditText
                android:id="@+id/transactionDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape1"
                android:gravity="top"
                android:hint="@string/transaction_details"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transactionCategory" />

            <Button
                android:id="@+id/markComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/mark_as_complete"
                android:textColor="#5A0505"

                app:backgroundTint="#A0E473"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/transactionDetails">

            </Button>

            <Button
                android:id="@+id/income"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="160dp"
                android:layout_height="54dp"
                android:layout_marginStart="56dp"
                android:layout_marginLeft="56dp"
                android:layout_marginTop="15dp"
                android:background="#BFE2F3"
                android:backgroundTint="@color/teal_200"
                android:text="@string/income"
                android:textColor="#FBF8F8"
                android:textSize="18sp"
                app:backgroundTint="#33C82A"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/markComplete"
                app:layout_constraintVertical_bias="0.0"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/expense"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="154dp"
                android:layout_height="54dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:background="#BFE2F3"
                android:text="@string/expense"
                android:textColor="#F8F7F7"
                android:textSize="18sp"
                app:backgroundTint="#EF1117"
                app:layout_constraintBottom_toBottomOf="@+id/income"
                app:layout_constraintStart_toEndOf="@+id/income"
                app:layout_constraintTop_toTopOf="@+id/income"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</FrameLayout>